# treeco

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md
.github/workflows/: lint.yml
cpp/: .clang-format  CMakeLists.txt  README.md
cpp/examples/: example.cpp
cpp/include/treeco/: Adjacency.hpp  CLI.hpp  Dynprog.hpp  Feasibility.hpp  Geometry.hpp  Gurobi.hpp  IO.hpp  LDTree.hpp  Problem.hpp  Tree.hpp  Types.hpp  Voronoi.hpp
cpp/include/treeco/Problem/: Explicit.hpp  Knapsack.hpp  Maxcut.hpp  Tsp.hpp
cpp/src/: Adjacency.cpp  CLI.cpp  Dynprog.cpp  Feasibility.cpp  Geometry.cpp  IO.cpp  LDTree.cpp  Problem.cpp  Tree.cpp  Voronoi.cpp  main.cpp
cpp/src/Problem/: Explicit.cpp  Knapsack.cpp  Maxcut.cpp  Tsp.cpp
cpp/tests/: test_adjacency.cpp  test_dynprog.cpp  test_feasibility.cpp  test_geometry.cpp  test_io.cpp  test_ldtree.cpp  test_problem.cpp  test_tree.cpp  test_voronoi.cpp
examples/: example.cpp
include/treeco/: Adjacency.hpp  CLI.hpp  Dynprog.hpp  Feasibility.hpp  Geometry.hpp  Gurobi.hpp  IO.hpp  LDTree.hpp  Problem.hpp  Tree.hpp  Types.hpp  Voronoi.hpp
include/treeco/Problem/: Explicit.hpp  Knapsack.hpp  Maxcut.hpp  Tsp.hpp
python/: CMakeLists.txt  README.md  pyproject.toml
python/examples/: example.py
python/treeco/: __init__.py  __init__.pyi  _treeco.cpp  _treeco.pyi  dynprog.pyi  geometry.pyi  io.pyi  ldtree.pyi  problem.pyi  tree.pyi  types.pyi  voronoi.pyi
src/: Adjacency.cpp  CLI.cpp  Dynprog.cpp  Feasibility.cpp  Geometry.cpp  IO.cpp  LDTree.cpp  Problem.cpp  Tree.cpp  Voronoi.cpp  main.cpp
src/Problem/: Explicit.cpp  Knapsack.cpp  Maxcut.cpp  Tsp.cpp
tests/: test_adjacency.cpp  test_dynprog.cpp  test_feasibility.cpp  test_geometry.cpp  test_io.cpp  test_ldtree.cpp  test_problem.cpp  test_tree.cpp  test_voronoi.cpp
