[build-system]
requires = ["pybind11", "setuptools>=61", "scikit-build-core", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "treeco"
version = "0.0.1"
description = "Treeco - Linear Decision Tree Policies for Combinatorial Optimization"
readme = "README.md"
authors = [
    {name = "Théo Guyard", email = "guyard.theo@gmail.com"}
]
requires-python = ">=3.8"
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["black", "flake8", "pytest"]

[project.urls]
"Homepage" = "https://github.com/TheoGuyard/treeco"
"Bug Reports" = "https://github.com/TheoGuyard/treeco/issues"

[tool.scikit-build]
wheel.packages = ["treeco"]
